Fix compact news ReceivedNewGame spacing

--- a/scss/_gamepage_activitynews.scss
+++ b/scss/_gamepage_activitynews.scss
@@ -19,6 +19,10 @@
   margin-top: 0px;
 }
 
+.appactivityday_Event_UVeN0.appactivityday_ReceivedNewGame_35ZQ6.appactivityday_NoCommentSupport_2CB_R.Panel.Focusable {
+  margin-bottom: 24px;
+}
+
 /* Activity Achievement Unlocked to 2 columns */
 
 .appactivityday_ActivityAchievementUnlocked_yJLy7 {
